--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,7 @@
 }
 
 .nav {
+  overflow-x: hidden;
   height: 80px;
   margin-top: -80px;
   display: flex;
