--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,4 +1,5 @@
 .sidebar-container {
+  overflow-x: hidden;
   position: fixed;
   z-index: 999;
   width: 100%;
